--- a/Data_Wrangling_JSON/Data_Wrangling_JSON_Exercise.ipynb
+++ b/Data_Wrangling_JSON/Data_Wrangling_JSON_Exercise.ipynb
@@ -292,34 +292,34 @@
        "   {'Name': 'Education', 'Percent': 26},\n",
        "   {'Name': 'Public Administration, Law, and Justice', 'Percent': 16},\n",
        "   {'Name': 'Education', 'Percent': 12}],\n",
-       "  'mjsector_namecode': [{'name': 'Education', 'code': 'EX'},\n",
-       "   {'name': 'Education', 'code': 'EX'},\n",
-       "   {'name': 'Public Administration, Law, and Justice', 'code': 'BX'},\n",
-       "   {'name': 'Education', 'code': 'EX'}],\n",
+       "  'mjsector_namecode': [{'code': 'EX', 'name': 'Education'},\n",
+       "   {'code': 'EX', 'name': 'Education'},\n",
+       "   {'code': 'BX', 'name': 'Public Administration, Law, and Justice'},\n",
+       "   {'code': 'EX', 'name': 'Education'}],\n",
        "  'mjtheme': ['Human development'],\n",
-       "  'mjtheme_namecode': [{'name': 'Human development', 'code': '8'},\n",
-       "   {'name': '', 'code': '11'}],\n",
+       "  'mjtheme_namecode': [{'code': '8', 'name': 'Human development'},\n",
+       "   {'code': '11', 'name': ''}],\n",
        "  'mjthemecode': '8,11',\n",
        "  'prodline': 'PE',\n",
        "  'prodlinetext': 'IBRD/IDA',\n",
        "  'productlinetype': 'L',\n",
        "  'project_abstract': {'cdata': 'The development objective of the Second Phase of General Education Quality Improvement Project for Ethiopia is to improve learning conditions in primary and secondary schools and strengthen institutions at different levels of educational administration. The project has six components. The first component is curriculum, textbooks, assessment, examinations, and inspection. This component will support improvement of learning conditions in grades KG-12 by providing increased access to teaching and learning materials and through improvements to the curriculum by assessing the strengths and weaknesses of the current curriculum. This component has following four sub-components: (i) curriculum reform and implementation; (ii) teaching and learning materials; (iii) assessment and examinations; and (iv) inspection. The second component is teacher development program (TDP). This component will support improvements in learning conditions in both primary and secondary schools by advancing the quality of teaching in general education through: (a) enhancing the training of pre-service teachers in teacher education institutions; and (b) improving the quality of in-service teacher training. This component has following three sub-components: (i) pre-service teacher training; (ii) in-service teacher training; and (iii) licensing and relicensing of teachers and school leaders. The third component is school improvement plan. This component will support the strengthening of school planning in order to improve learning outcomes, and to partly fund the school improvement plans through school grants. It has following two sub-components: (i) school improvement plan; and (ii) school grants. The fourth component is management and capacity building, including education management information systems (EMIS). This component will support management and capacity building aspect of the project. This component has following three sub-components: (i) capacity building for education planning and management; (ii) capacity building for school planning and management; and (iii) EMIS. The fifth component is improving the quality of learning and teaching in secondary schools and universities through the use of information and communications technology (ICT). It has following five sub-components: (i) national policy and institution for ICT in general education; (ii) national ICT infrastructure improvement plan for general education; (iii) develop an integrated monitoring, evaluation, and learning system specifically for the ICT component; (iv) teacher professional development in the use of ICT; and (v) provision of limited number of e-Braille display readers with the possibility to scale up to all secondary education schools based on the successful implementation and usage of the readers. The sixth component is program coordination, monitoring and evaluation, and communication. It will support institutional strengthening by developing capacities in all aspects of program coordination, monitoring and evaluation; a new sub-component on communications will support information sharing for better management and accountability. It has following three sub-components: (i) program coordination; (ii) monitoring and evaluation (M and E); and (iii) communication.'},\n",
        "  'project_name': 'Ethiopia General Education Quality Improvement Project II',\n",
-       "  'projectdocs': [{'DocTypeDesc': 'Project Information Document (PID),  Vol.',\n",
+       "  'projectdocs': [{'DocDate': '28-AUG-2013',\n",
        "    'DocType': 'PID',\n",
-       "    'EntityID': '090224b081e545fb_1_0',\n",
+       "    'DocTypeDesc': 'Project Information Document (PID),  Vol.',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=090224b081e545fb_1_0',\n",
-       "    'DocDate': '28-AUG-2013'},\n",
-       "   {'DocTypeDesc': 'Indigenous Peoples Plan (IP),  Vol.1 of 1',\n",
+       "    'EntityID': '090224b081e545fb_1_0'},\n",
+       "   {'DocDate': '01-JUL-2013',\n",
        "    'DocType': 'IP',\n",
-       "    'EntityID': '000442464_20130920111729',\n",
+       "    'DocTypeDesc': 'Indigenous Peoples Plan (IP),  Vol.1 of 1',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=000442464_20130920111729',\n",
-       "    'DocDate': '01-JUL-2013'},\n",
-       "   {'DocTypeDesc': 'Project Information Document (PID),  Vol.',\n",
+       "    'EntityID': '000442464_20130920111729'},\n",
+       "   {'DocDate': '22-NOV-2012',\n",
        "    'DocType': 'PID',\n",
-       "    'EntityID': '090224b0817b19e2_1_0',\n",
+       "    'DocTypeDesc': 'Project Information Document (PID),  Vol.',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=090224b0817b19e2_1_0',\n",
-       "    'DocDate': '22-NOV-2012'}],\n",
+       "    'EntityID': '090224b0817b19e2_1_0'}],\n",
        "  'projectfinancialtype': 'IDA',\n",
        "  'projectstatusdisplay': 'Active',\n",
        "  'regionname': 'Africa',\n",
@@ -332,16 +332,16 @@
        "  'sector3': {'Name': 'Public administration- Other social services',\n",
        "   'Percent': 16},\n",
        "  'sector4': {'Name': 'Tertiary education', 'Percent': 12},\n",
-       "  'sector_namecode': [{'name': 'Primary education', 'code': 'EP'},\n",
-       "   {'name': 'Secondary education', 'code': 'ES'},\n",
-       "   {'name': 'Public administration- Other social services', 'code': 'BS'},\n",
-       "   {'name': 'Tertiary education', 'code': 'ET'}],\n",
+       "  'sector_namecode': [{'code': 'EP', 'name': 'Primary education'},\n",
+       "   {'code': 'ES', 'name': 'Secondary education'},\n",
+       "   {'code': 'BS', 'name': 'Public administration- Other social services'},\n",
+       "   {'code': 'ET', 'name': 'Tertiary education'}],\n",
        "  'sectorcode': 'ET,BS,ES,EP',\n",
        "  'source': 'IBRD',\n",
        "  'status': 'Active',\n",
        "  'supplementprojectflg': 'N',\n",
        "  'theme1': {'Name': 'Education for all', 'Percent': 100},\n",
-       "  'theme_namecode': [{'name': 'Education for all', 'code': '65'}],\n",
+       "  'theme_namecode': [{'code': '65', 'name': 'Education for all'}],\n",
        "  'themecode': '65',\n",
        "  'totalamt': 130000000,\n",
        "  'totalcommamt': 130000000,\n",
@@ -368,47 +368,47 @@
        "  'majorsector_percent': [{'Name': 'Public Administration, Law, and Justice',\n",
        "    'Percent': 70},\n",
        "   {'Name': 'Public Administration, Law, and Justice', 'Percent': 30}],\n",
-       "  'mjsector_namecode': [{'name': 'Public Administration, Law, and Justice',\n",
-       "    'code': 'BX'},\n",
-       "   {'name': 'Public Administration, Law, and Justice', 'code': 'BX'}],\n",
+       "  'mjsector_namecode': [{'code': 'BX',\n",
+       "    'name': 'Public Administration, Law, and Justice'},\n",
+       "   {'code': 'BX', 'name': 'Public Administration, Law, and Justice'}],\n",
        "  'mjtheme': ['Economic management', 'Social protection and risk management'],\n",
-       "  'mjtheme_namecode': [{'name': 'Economic management', 'code': '1'},\n",
-       "   {'name': 'Social protection and risk management', 'code': '6'}],\n",
+       "  'mjtheme_namecode': [{'code': '1', 'name': 'Economic management'},\n",
+       "   {'code': '6', 'name': 'Social protection and risk management'}],\n",
        "  'mjthemecode': '1,6',\n",
        "  'prodline': 'RE',\n",
        "  'prodlinetext': 'Recipient Executed Activities',\n",
        "  'productlinetype': 'L',\n",
        "  'project_name': 'TN: DTF Social Protection Reforms Support',\n",
-       "  'projectdocs': [{'DocTypeDesc': 'Project Information Document (PID),  Vol.1 of 1',\n",
+       "  'projectdocs': [{'DocDate': '29-MAR-2013',\n",
        "    'DocType': 'PID',\n",
-       "    'EntityID': '000333037_20131024115616',\n",
+       "    'DocTypeDesc': 'Project Information Document (PID),  Vol.1 of 1',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=000333037_20131024115616',\n",
-       "    'DocDate': '29-MAR-2013'},\n",
-       "   {'DocTypeDesc': 'Integrated Safeguards Data Sheet (ISDS),  Vol.1 of 1',\n",
+       "    'EntityID': '000333037_20131024115616'},\n",
+       "   {'DocDate': '29-MAR-2013',\n",
        "    'DocType': 'ISDS',\n",
-       "    'EntityID': '000356161_20131024151611',\n",
+       "    'DocTypeDesc': 'Integrated Safeguards Data Sheet (ISDS),  Vol.1 of 1',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=000356161_20131024151611',\n",
-       "    'DocDate': '29-MAR-2013'},\n",
-       "   {'DocTypeDesc': 'Integrated Safeguards Data Sheet (ISDS),  Vol.1 of 1',\n",
+       "    'EntityID': '000356161_20131024151611'},\n",
+       "   {'DocDate': '29-MAR-2013',\n",
        "    'DocType': 'ISDS',\n",
-       "    'EntityID': '000442464_20131031112136',\n",
+       "    'DocTypeDesc': 'Integrated Safeguards Data Sheet (ISDS),  Vol.1 of 1',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=000442464_20131031112136',\n",
-       "    'DocDate': '29-MAR-2013'},\n",
-       "   {'DocTypeDesc': 'Project Information Document (PID),  Vol.1 of 1',\n",
+       "    'EntityID': '000442464_20131031112136'},\n",
+       "   {'DocDate': '29-MAR-2013',\n",
        "    'DocType': 'PID',\n",
-       "    'EntityID': '000333037_20131031105716',\n",
+       "    'DocTypeDesc': 'Project Information Document (PID),  Vol.1 of 1',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=000333037_20131031105716',\n",
-       "    'DocDate': '29-MAR-2013'},\n",
-       "   {'DocTypeDesc': 'Integrated Safeguards Data Sheet (ISDS),  Vol.1 of 1',\n",
+       "    'EntityID': '000333037_20131031105716'},\n",
+       "   {'DocDate': '16-JAN-2013',\n",
        "    'DocType': 'ISDS',\n",
-       "    'EntityID': '000356161_20130305113209',\n",
+       "    'DocTypeDesc': 'Integrated Safeguards Data Sheet (ISDS),  Vol.1 of 1',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=000356161_20130305113209',\n",
-       "    'DocDate': '16-JAN-2013'},\n",
-       "   {'DocTypeDesc': 'Project Information Document (PID),  Vol.1 of 1',\n",
+       "    'EntityID': '000356161_20130305113209'},\n",
+       "   {'DocDate': '16-JAN-2013',\n",
        "    'DocType': 'PID',\n",
-       "    'EntityID': '000356161_20130305113716',\n",
+       "    'DocTypeDesc': 'Project Information Document (PID),  Vol.1 of 1',\n",
        "    'DocURL': 'http://www-wds.worldbank.org/servlet/WDSServlet?pcont=details&eid=000356161_20130305113716',\n",
-       "    'DocDate': '16-JAN-2013'}],\n",
+       "    'EntityID': '000356161_20130305113716'}],\n",
        "  'projectfinancialtype': 'OTHER',\n",
        "  'projectstatusdisplay': 'Active',\n",
        "  'regionname': 'Middle East and North Africa',\n",
@@ -417,16 +417,16 @@
        "  'sector1': {'Name': 'Public administration- Other social services',\n",
        "   'Percent': 70},\n",
        "  'sector2': {'Name': 'General public administration sector', 'Percent': 30},\n",
-       "  'sector_namecode': [{'name': 'Public administration- Other social services',\n",
-       "    'code': 'BS'},\n",
-       "   {'name': 'General public administration sector', 'code': 'BZ'}],\n",
+       "  'sector_namecode': [{'code': 'BS',\n",
+       "    'name': 'Public administration- Other social services'},\n",
+       "   {'code': 'BZ', 'name': 'General public administration sector'}],\n",
        "  'sectorcode': 'BZ,BS',\n",
        "  'source': 'IBRD',\n",
        "  'status': 'Active',\n",
        "  'supplementprojectflg': 'N',\n",
        "  'theme1': {'Name': 'Other economic management', 'Percent': 30},\n",
-       "  'theme_namecode': [{'name': 'Other economic management', 'code': '24'},\n",
-       "   {'name': 'Social safety nets', 'code': '54'}],\n",
+       "  'theme_namecode': [{'code': '24', 'name': 'Other economic management'},\n",
+       "   {'code': '54', 'name': 'Social safety nets'}],\n",
        "  'themecode': '54,24',\n",
        "  'totalamt': 0,\n",
        "  'totalcommamt': 4700000,\n",
@@ -925,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
