--- a/Examine_Racial_Discrimination_using_EDA/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/Examine_Racial_Discrimination_using_EDA/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -46,6 +46,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### My response\n",
+    "***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -71,24 +79,49 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "235.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 4870 entries, 0 to 4869\n",
+      "Data columns (total 2 columns):\n",
+      "race    4870 non-null object\n",
+      "call    4870 non-null float32\n",
+      "dtypes: float32(1), object(1)\n",
+      "memory usage: 95.1+ KB\n"
+     ]
     }
    ],
    "source": [
-    "# number of callbacks for black-sounding names\n",
-    "sum(data[data.race=='w'].call)"
+    "data = data[['race','call']]\n",
+    "data.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "w    2435\n",
+       "b    2435\n",
+       "Name: race, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.race.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,256 +144,304 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
+       "      <th>call</th>\n",
+       "      <th>0.0</th>\n",
+       "      <th>1.0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>race</th>\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>ad</th>\n",
-       "      <th>education</th>\n",
-       "      <th>ofjobs</th>\n",
-       "      <th>yearsexp</th>\n",
-       "      <th>honors</th>\n",
-       "      <th>volunteer</th>\n",
-       "      <th>military</th>\n",
-       "      <th>empholes</th>\n",
-       "      <th>occupspecific</th>\n",
-       "      <th>...</th>\n",
-       "      <th>compreq</th>\n",
-       "      <th>orgreq</th>\n",
-       "      <th>manuf</th>\n",
-       "      <th>transcom</th>\n",
-       "      <th>bankreal</th>\n",
-       "      <th>trade</th>\n",
-       "      <th>busservice</th>\n",
-       "      <th>othservice</th>\n",
-       "      <th>missind</th>\n",
-       "      <th>ownership</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
+       "      <th>b</th>\n",
+       "      <td>2278</td>\n",
+       "      <td>157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>316</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>313</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>b</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>313</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Nonprofit</td>\n",
+       "      <th>w</th>\n",
+       "      <td>2200</td>\n",
+       "      <td>235</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 65 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  id ad  education  ofjobs  yearsexp  honors  volunteer  military  empholes  \\\n",
-       "0  b  1          4       2         6       0          0         0         1   \n",
-       "1  b  1          3       3         6       0          1         1         0   \n",
-       "2  b  1          4       1         6       0          0         0         0   \n",
-       "3  b  1          3       4         6       0          1         0         1   \n",
-       "4  b  1          3       3        22       0          0         0         0   \n",
-       "\n",
-       "   occupspecific    ...      compreq  orgreq  manuf  transcom  bankreal trade  \\\n",
-       "0             17    ...          1.0     0.0    1.0       0.0       0.0   0.0   \n",
-       "1            316    ...          1.0     0.0    1.0       0.0       0.0   0.0   \n",
-       "2             19    ...          1.0     0.0    1.0       0.0       0.0   0.0   \n",
-       "3            313    ...          1.0     0.0    1.0       0.0       0.0   0.0   \n",
-       "4            313    ...          1.0     1.0    0.0       0.0       0.0   0.0   \n",
-       "\n",
-       "  busservice othservice  missind  ownership  \n",
-       "0        0.0        0.0      0.0             \n",
-       "1        0.0        0.0      0.0             \n",
-       "2        0.0        0.0      0.0             \n",
-       "3        0.0        0.0      0.0             \n",
-       "4        0.0        1.0      0.0  Nonprofit  \n",
-       "\n",
-       "[5 rows x 65 columns]"
+       "call   0.0  1.0\n",
+       "race           \n",
+       "b     2278  157\n",
+       "w     2200  235"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "<div class=\"span5 alert alert-success\">\n",
-    "<p>Your answers to Q1 and Q2 here</p>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = data[data.race=='w']\n",
-    "b = data[data.race=='b']"
+    "data.groupby(['race','call']).size().unstack()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>call</th>\n",
+       "      <th>0.0</th>\n",
+       "      <th>1.0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>race</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>0.935524</td>\n",
+       "      <td>0.064476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w</th>\n",
+       "      <td>0.903491</td>\n",
+       "      <td>0.096509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "call       0.0       1.0\n",
+       "race                    \n",
+       "b     0.935524  0.064476\n",
+       "w     0.903491  0.096509"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution to Q3 here"
+    "data.groupby(['race','call']).size().apply(lambda a: a/2435.).unstack()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1. What test is appropriate for this problem? Does CLT apply?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-success\">\n",
-    "<p> Your answers to Q4 and Q5 here </p>\n",
-    "</div>"
+    "The appropriate test is a two sample z-test for the difference in proportions test with independent samples.  We also assume that the sampling was random.  The CLT does apply in this case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. What are the null and alternative hypotheses?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will conduct a two-sided test.  The null hypothesis is that there is no difference between the two population proportions.  The alternative hypothesis is that there is a difference between the two population proportions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Compute margin of error, confidence interval, and p-value. Try using both the bootstrapping and the frequentist statistical approaches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Callback rates for blacks & whites are: 0.064, 0.097\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the callback rates for both races\n",
+    "n_b = len(data[data.race=='b'])\n",
+    "n_w = len(data[data.race=='w'])\n",
+    "c_b = sum(data[data.race=='b'].call)\n",
+    "c_w = sum(data[data.race=='w'].call)\n",
+    "p_b = c_b / n_b\n",
+    "p_w = c_w / n_w\n",
+    "print('Callback rates for blacks & whites are: {:1.3f}, {:1.3f}'.format(p_b,p_w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard error for the difference between callback rates: 0.0078\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the standard error for the difference between callback rates\n",
+    "se = np.sqrt((p_b*(1-p_b)/n_b)+(p_w*(1-p_w)/n_w))\n",
+    "print('Standard error for the difference between callback rates: {:1.4f}'.format(se))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95% confidence interval: (-0.047, -0.017)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find 95% and 99% confidence intervals\n",
+    "crit = stats.norm.isf([0.025,0.005])\n",
+    "ci_95 = [p_b-p_w-crit[0]*se, p_b-p_w+crit[0]*se]\n",
+    "print(\"95% confidence interval: ({:2.3f}, {:2.3f})\".format(ci_95[0],ci_95[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99% confidence interval: (-0.052, -0.012)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ci_99 = [p_b-p_w-crit[1]*se, p_b-p_w+crit[1]*se]\n",
+    "print(\"99% confidence interval: ({:2.3f}, {:2.3f})\".format(ci_99[0],ci_99[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The p-value for the test of equality of callback rates is: 0.00004\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute the p-value of two-tailed test\n",
+    "z_stat = (p_b - p_w) / se\n",
+    "p_value = 2*stats.norm.cdf(z_stat)\n",
+    "print('The p-value for the test of equality of callback rates is: {:1.5f}'.format(p_value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Write a story describing the statistical significance in the context or the original problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the p-value is less than 0.01, we reject the null hypothesis.  This means that there is a significant difference between the callbacks that white-sounding names get and the callbacks that black-sounding names get.  In fact, the difference suggests that the callback rate for black-sounding names is 3.3% percentage points less than the callback rate for white-sounding names.  This is evidence that racial discrimination in the US labor market still exists."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Does your analysis mean that race/name is the most important factor in callback success?  Why or why not? If not, how would you amend your analysis?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unconditional on all factors that could affect the callback rate, such as education, experience, relevant skills, etc., we find a significant difference.  Without controlling for these other factors, we could be picking up other effects that are the underlying driving forces for the difference.  A simple extension would be to control for these other factors using a logistic regression."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
